mod_reqtimeout: Resolve unexpected timeouts on keepalive requests under the Event MPM. PR56216.

Submitted By: Frank Meier <frank meier ergon ch>
Committed By: covener




git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1580568 13f79535-47bb-0310-9956-ffa450edef68